try fix footer overflow

--- a/Assets/main.css
+++ b/Assets/main.css
@@ -196,6 +196,7 @@ footer a {
   flex-direction: column;
 }
 .footer-icons p {
+  overflow: hidden;
   display: flex;
   text-align: end;
 }
